--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.6"
+    "vue": "^3.2.26"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@typescript-eslint/eslint-plugin": "~4.29.3",
     "@typescript-eslint/parser": "~4.29.3",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vitejs/plugin-vue-jsx": "^1.1.7",
+    "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-standard": "~6.1.0",
     "@vue/eslint-config-typescript": "~7.0.0",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.1",
-    "vue-tsc": "^0.2.2",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-vue": "~7.16.0",
     "prettier": "^2.3.2",
-    "@babel/core": "^7.15.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@vue/babel-plugin-jsx": "^1.0.6"
+    "typescript": "^4.3.2",
+    "vite": "^2.5.1",
+    "vue-tsc": "^0.2.2"
   }
 }
