--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-  "name": "vue-component-template",
-  "version": "0.1.0",
+  "type": "module",
+  "name": "my-component",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "rollup -c",
-    "serve": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.2.26"
+    "vue": "^3.2.41"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@typescript-eslint/eslint-plugin": "~4.29.3",
-    "@typescript-eslint/parser": "~4.29.3",
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vitejs/plugin-vue-jsx": "^1.1.7",
-    "@vue/babel-plugin-jsx": "^1.0.6",
-    "@vue/compiler-sfc": "^3.0.5",
-    "@vue/eslint-config-standard": "~6.1.0",
-    "@vue/eslint-config-typescript": "~7.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-vue": "~7.16.0",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.1",
-    "vue-tsc": "^0.2.2"
+    "@babel/core": "^7.20.2",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "@vitejs/plugin-vue-jsx": "^2.1.0",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "babel": "^6.23.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-vue": "^9.7.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.6.4",
+    "vite": "^3.2.0",
+    "vite-plugin-dts": "^1.6.6",
+    "vue-tsc": "^1.0.9"
   }
 }
